--- a/builds/windows/vs2012/freetype.vcxproj
+++ b/builds/windows/vs2012/freetype.vcxproj
@@ -65,6 +65,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{78B079BD-9FC7-4B9E-B4A6-96DA0F00248B}</ProjectGuid>
     <RootNamespace>tsfreetype</RootNamespace>
+    <ProjectName>freetype</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="PlatformToolset">
